--- a/Chicago/Chicago.Dal/appsettings.json
+++ b/Chicago/Chicago.Dal/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "ChicagoConnection": "Server=(local);Database=chicago;User Id=chicago;Password=Password@123;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local);Database=chicago;User Id=chicago;Password=Password@123;MultipleActiveResultSets=true"
   }
 }
