task/implement-business-layer
completed the business layer. completed the dependency injections. completed the controllers

--- a/Chicago/Chicago.Api/appsettings.json
+++ b/Chicago/Chicago.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=chicago;User Id=chicago;Password=Password@123;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Cors": {
+    "SpaOrigins": [ "https://localhost:4200" ]
+  }
 }
