--- a/Chicago/Chicago.Api/Chicago.Api.csproj
+++ b/Chicago/Chicago.Api/Chicago.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chicago.Bll\Chicago.Bll.csproj" />
+    <ProjectReference Include="..\Chicago.Dal\Chicago.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
