--- a/Chicago/Chicago.Bll/Chicago.Bll.csproj
+++ b/Chicago/Chicago.Bll/Chicago.Bll.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Daytona" Version="1.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Chicago.Dal\Chicago.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
